--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "popper.js": "^1.14.3",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
+    "vue2-editor": "^2.5.0",
     "vuex": "^3.0.1"
   },
   "browserslist": [
